fix(menu): align sub menu properly

--- a/assets/styles/layouts/_menu.scss
+++ b/assets/styles/layouts/_menu.scss
@@ -40,6 +40,7 @@
   &_wrapper {
     display: flex;
     flex-flow: column nowrap;
+    align-items: flex-start;
     padding-top: spacing(2);
 
     @media (break-up(md)) {
@@ -50,7 +51,7 @@
       display: flex;
       flex-flow: column nowrap;
       width: 100%;
-      margin: auto;
+      margin: spacing(0, auto);
       padding: spacing(2);
 
       @media (break-up(sm)) {
